--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,19 +13,19 @@ dependencies:
     sdk: flutter
 
   carousel_slider: ^5.1.1
-  connectivity_plus: ^6.1.4
+  connectivity_plus: ^7.0.0
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   flutter_launcher_icons: ^0.14.4
-  flutter_local_notifications: ^19.4.0
-  flutter_native_splash: ^2.4.6
-  flutter_widget_from_html: ^0.17.0
-  fluttertoast: ^8.2.12
+  flutter_local_notifications: ^19.5.0
+  flutter_native_splash: ^2.4.7
+  flutter_widget_from_html: ^0.17.1
+  fluttertoast: ^9.0.0
   get: ^4.7.2
-  http: ^1.4.0
+  http: ^1.5.0
   intl: ^0.20.2
-  local_auth: ^2.3.0
-  logger: ^2.6.1
+  local_auth: ^3.0.0
+  logger: ^2.6.2
   permission_handler: ^12.0.1
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
